--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,18 +21,33 @@ jobs:
       #   run: |
       #     echo "{TRIGGER_BRANCH}={${{env.GITHUB_HEAD_REF_SLUG}}}" >> $GITHUB_ENV
 
+      # if pr is from a fork repo, create a mirror branch in gitlab
+      # - name: Assign Trigger Branch Context (Fork PR)
+      #   # if: ${{ github.event_name != 'pull_request_target' }}
+      #   run: |
+      #     echo ${{ github.event.pull_request.head.sha }}
+      #     echo ${{github.event.pull_request.head.repo.full_name}}
+      #     echo ${{env.GITHUB_REF_NAME}}
+      #     git status -sb
+        # echo "{TRIGGER_BRANCH}={${{github.event.pull_request.number}}-${{env.GITHUB_REF_NAME}}}" >> $GITHUB_ENV
+        # git branch ${{env.TRIGGER_BRANCH}} ${{ github.event.pull_request.head.sha }}
+        # git push origin ${{env.TRIGGER_BRANCH}}
+
       - name: Assign Trigger Branch Context (Fork PR)
-        if: ${{ github.event_name != 'pull_request_target' }}
+        if: (github.event_name == 'pull_request_target' || github.event_name == 'pull_request')
         run: |
           echo ${{ github.event.pull_request.head.sha }}
           echo ${{github.event.pull_request.head.repo.full_name}}
           echo ${{env.GITHUB_REF_NAME}}
           git status -sb
-      # echo "{TRIGGER_BRANCH}={${{github.run_id}}-${{env.GITHUB_REF_NAME}}}" >> $GITHUB_ENV
-      # git branch ${{env.TRIGGER_BRANCH}} ${{ github.event.pull_request.head.sha }}
-      # git push origin ${{env.TRIGGER_BRANCH}}
+          echo "{TRIGGER_BRANCH}={test}" >> $GITHUB_ENV
+          git branch ${{env.TRIGGER_BRANCH}} ${{ github.event.pull_request.head.sha }}
+          git push origin ${{env.TRIGGER_BRANCH}}
+
+
 
       # - name: Update Mirror
+          # if: ${{ github.event_name != 'pull_request_target' }}
       #   run: |
       #     curl -X POST https://*******/projects/elexis%2Felexis-3-core/mirror/pull
 
