--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
         # git push origin ${{env.TRIGGER_BRANCH}}
 
       - name: Assign Trigger Branch Context (Fork PR)
-        if: (github.event_name == 'pull_request_target' || github.event_name == 'pull_request')
+        if: (github.event_name != 'push')
         run: |
           echo ${{ github.event.pull_request.head.sha }}
           echo ${{github.event.pull_request.head.repo.full_name}}
