--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,12 +41,14 @@ jobs:
           echo ${{env.GITHUB_REF_NAME}}
           git status -sb
           echo "TRIGGER_BRANCH=$('test')" >> $GITHUB_ENV
+
+      - name: Next
+        if: (github.event_name != 'push')
+        run: |
           echo "${{ env.TRIGGER_BRANCH }}"
         # git branch ${{env.TRIGGER_BRANCH}} ${{ github.event.pull_request.head.sha }}
         # git push origin ${{env.TRIGGER_BRANCH}}
-
-
-
+        
       # - name: Update Mirror
           # if: ${{ github.event_name != 'pull_request_target' }}
       #   run: |
