--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,14 +40,13 @@ jobs:
           echo ${{github.event.pull_request.head.repo.full_name}}
           echo ${{env.GITHUB_REF_NAME}}
           git status -sb
-          echo "TRIGGER_BRANCH='test'" >> $GITHUB_ENV
+          echo "TRIGGER_BRANCH=test" >> $GITHUB_ENV
 
       - name: Next
         if: (github.event_name != 'push')
         run: |
-          echo "${{ env.TRIGGER_BRANCH }}"
-        # git branch ${{env.TRIGGER_BRANCH}} ${{ github.event.pull_request.head.sha }}
-        # git push origin ${{env.TRIGGER_BRANCH}}
+          git branch ${{env.TRIGGER_BRANCH}} ${{ github.event.pull_request.head.sha }}
+          git push origin ${{env.TRIGGER_BRANCH}}
 
       # - name: Update Mirror
           # if: ${{ github.event_name != 'pull_request_target' }}
