--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
           echo ${{github.event.pull_request.head.repo.full_name}}
           echo ${{env.GITHUB_REF_NAME}}
           git status -sb
-          echo "TRIGGER_BRANCH=test" >> $GITHUB_ENV
+          echo "TRIGGER_BRANCH=test2" >> $GITHUB_ENV
 
       - name: Next
         if: (github.event_name != 'push')
