--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-on: [pull_request,pull_request_target, push]
+on: [pull_request, push]
 
 jobs:
   gitlab-ci:
@@ -38,12 +38,12 @@ jobs:
         run: |
           echo ${{ github.event.pull_request.head.sha }}
           echo ${{github.event.pull_request.head.repo.full_name}}
-          echo ${{env.GITHUB_REF_NAME}}
+          echo '${{github.event.pull_request.number}}-${{env.GITHUB_REF_NAME}}'
           git status -sb
           echo "TRIGGER_BRANCH=test2" >> $GITHUB_ENV
 
       - name: Next
-        if: (github.event_name == 'pull_request_target')
+        if: github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'
         run: |
           git branch ${{env.TRIGGER_BRANCH}} ${{ github.event.pull_request.head.sha }}
           git push origin ${{env.TRIGGER_BRANCH}}
@@ -105,7 +105,7 @@ jobs:
           # fi
 
       - name: Clean up
-        if: ${{ github.event_name == 'pull_request_target' }}
+        if: github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'dependabot[bot]'
         run: |
           git branch -d ${{env.TRIGGER_BRANCH}}
           git push origin --delete ${{env.TRIGGER_BRANCH}}
