--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
           echo ${{ github.event.pull_request.head.sha }}
           echo ${{github.event.pull_request.head.repo.full_name}}
           echo '${{github.event.pull_request.number}}-${{env.GITHUB_REF_NAME}}'
+          echo ${{github.repository}}
           git status -sb
           echo "TRIGGER_BRANCH=test2" >> $GITHUB_ENV
 
