--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,17 +36,12 @@ jobs:
       - name: Assign Trigger Branch Context (Fork PR)
         if: (github.event_name != 'push')
         run: |
-          echo ${{ github.event.pull_request.head.sha }}
-          echo ${{github.event.pull_request.head.repo.full_name}}
-          echo '${{github.event.pull_request.number}}-${{env.GITHUB_REF_NAME}}'
-          echo ${{github.repository}}
-          git status -sb
-          echo "TRIGGER_BRANCH=test2" >> $GITHUB_ENV
+          echo "TRIGGER_BRANCH='${{github.event.pull_request.number}}-${{env.GITHUB_REF_NAME}}'" >> $GITHUB_ENV
 
       - name: Next
         if: github.event.pull_request.head.repo.full_name != github.repository && github.actor != 'dependabot[bot]'
         run: |
-          git branch ${{env.TRIGGER_BRANCH}} ${{ github.event.pull_request.head.sha }}
+          git branch ${{env.TRIGGER_BRANCH}}
           git push origin ${{env.TRIGGER_BRANCH}}
 
       # - name: Update Mirror
